[package]
name = "advent_of_code_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.10"
rayon = "1.5"
md-5 = "0.10"
hex-literal = "0.3"
enquote = "1.1"
ndarray = "0.15"
serde_json = "1.0"
lazy_static = "1.4"