[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[profile.dev]
debug = 2

[profile.test]
debug = 2

[profile.bench]
debug = 2


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
nalgebra = "0.29"
ndarray = "0.15"
serde_json = "1.0"
itertools = "0.10"
lazy_static = "1.4"
nom = "7.1"
hex = "0.4"
pathfinding = "3.0"
rayon = "1.5"